--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "cookies": "^0.9.1",
     "cors": "^2.8.5",
     "date-fns": "^3.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.1.5",
-    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "mongoose-sequence": "^6.0.0",
+    "node-appwrite": "^14.2.0",
     "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.9",
     "uuid": "^9.0.1"
   }
 }
