Modified the env example file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-
 DATABASE_URI=
-ACCESS_TOKEN_SECRET=
-REFRESH_TOKEN_SECRET=
+APPWRITE_HOST_NAME="https://cloud.appwrite.io/v1"
+APPWRITE_PROJECT_ID=
+APPWRITE_API_KEY=
