--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": "16.x"
   },
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -14,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "appwrite": "^21.4.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cookies": "^0.9.1",
@@ -27,7 +29,9 @@
     "mongoose-sequence": "^6.0.0",
     "node-appwrite": "^14.2.0",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.9",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
