--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.1.5",
+    "googleapis": "^166.0.0",
     "mongoose": "^8.1.0",
     "mongoose-sequence": "^6.0.0",
     "node-appwrite": "^14.2.0",
