Added google auth and custom authentication with JWT token through out the application. Removed appwrite from the app

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,20 @@
 DATABASE_URI=
-APPWRITE_HOST_NAME="https://cloud.appwrite.io/v1"
-APPWRITE_PROJECT_ID=
-APPWRITE_API_KEY=
+BACKEND_URL=
+FRONTEND_URL=
+
+## Email Account Setup
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_NAME=
+SMTP_CLIENT_ID=
+SMTP_CLIENT_SECRET=
+SMTP_REDIRECT_URI=
+SMTP_REFRESH_TOKEN=
+REDIRECT_URI=
+
+## Google OAuth Setup
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+JWT_SECRET=
