--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "16.x"
+    "node": ">=18.0.0"
   },
   "type": "commonjs",
   "scripts": {
