--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.1.0",
     "mongoose-sequence": "^6.0.0",
     "nodemailer": "^6.9.16",
+    "resend": "^6.5.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
