--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "express-rate-limit": "^7.1.5",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "mongoose-sequence": "^6.0.0",
     "nodemailer": "^6.9.16",
+    "openai": "^6.9.1",
     "resend": "^6.5.2",
     "uuid": "^9.0.1"
   },
